# foc8313-blinky-rs

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  justfile  my-dev-shell  rust-toolchain.toml
.cargo/: config.toml
drivers/: Cargo.toml
drivers/src/: isense.rs  lib.rs  pwm.rs
foc8313-blinky/: Cargo.toml
src/: main.rs
