[package]
name = "embassy-blink"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embassy-stm32 = { version = "0.1.0", features = ["defmt", "rt", "stm32f103cb", "time-driver-any", "exti", "unstable-pac", "memory-x"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
#embassy-time-driver = { version = "0.1.0" }
defmt = "0.3"
defmt-rtt = "0.4"
#defmt-panic = "1.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[features]
default = []

[profile.dev]
debug = true
opt-level = "z"
lto = true
