[package]
name = "embassy-blink"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt-serial = "0.10.0"
static_cell = "2"
embassy-stm32 = { version = "0.3.0", features = ["defmt", "rt", "stm32f103cb", "time-driver-any", "exti", "unstable-pac", "memory-x"] }
embassy-executor = { version = "0.8.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
#embassy-time-driver = { version = "0.1.0" }
heapless = { version = "0.8", default-features = false }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
#defmt-panic = "1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[features]
default = []

[profile.dev]
debug = true
opt-level = "z"
lto = true
